--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@ body {
 font-family: 'Trykker', serif;
 font-size: 1em;              
 max-width: 900px;
-padding-left: 2%;
-padding-right: 3%;
+padding: 2em;
 margin: 0 auto;
 background: #F5F5F0;
 text-align: justify;
