--- a/articles/template/index.html
+++ b/articles/template/index.html
@@ -4,6 +4,27 @@
     <title>Titolo</title>
     <meta charset="UTF-8">
     <meta name="description" content="Descrizione">
+    <meta name="author" content="Davide Pisanò">
+
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Article",
+          "headline": "Music recognition AI",
+          "image": [
+            "https://davidesnotes.com/articles/2/img/SEO/1x1.webp",
+            "https://davidesnotes.com/articles/2/img/SEO/4x3.webp",
+            "https://davidesnotes.com/articles/2/img/SEO/16x9.webp"
+           ],
+          "datePublished": "2021-09-04T13:20:37+02:00",
+          "dateModified": "2021-09-04T17:08:26+02:00",
+          "author": [{
+              "@type": "Person",
+              "name": "Davide Pisanò",
+              "url": "https://davidesnotes.com"
+            }]
+        }
+    </script>
 
     <link rel="stylesheet" href="../../style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0">
