--- a/style.css
+++ b/style.css
@@ -57,8 +57,7 @@ h2:after {
     background: linear-gradient(to right, #777, #333, #777);
     display: block;
     height:1px;
-    width: 900px;
-    bottom: 0;
+    width:100%;
     margin-top: 0.5em;
     margin-bottom: 0.5em;
 }
